--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "kot",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.1.0",
-    "markdown": "^0.5.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-images": "^0.5.1",
-    "react-router": "^3.0.0"
+    "jquery": "3.1.0",
+    "markdown": "0.5.0",
+    "react": "15.2.1",
+    "react-dom": "15.2.1",
+    "react-images": "0.5.1",
+    "react-router": "3.0.0"
   },
   "babel": {
     "presets": [
@@ -27,14 +27,14 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.11.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "nodemon": "^1.11.0",
-    "watchify": "^3.7.0"
+    "babel-cli": "6.11.4",
+    "babel-core": "6.11.4",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.11.1",
+    "babelify": "7.3.0",
+    "browserify": "13.1.0",
+    "nodemon": "1.11.0",
+    "watchify": "3.7.0"
   }
 }
