--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,6 +7,12 @@
     <groupId>home.ru</groupId>
     <artifactId>home</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+    <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>	
+  	</properties>
+    
     <build>
         <plugins>
             <plugin>
