--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "jquery": "3.1.0",
     "markdown": "0.5.0",
-    "react": "15.2.1",
-    "react-dom": "15.2.1",
-    "react-images": "0.5.1",
+    "react": "^15.5.4",
+    "react-dom": "15.5.4",
+    "react-images": "0.5.2",
     "react-router": "3.0.0"
   },
   "babel": {
@@ -27,11 +27,11 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "6.11.4",
-    "babel-core": "6.11.4",
-    "babel-plugin-transform-object-rest-spread": "6.8.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.11.1",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "babelify": "7.3.0",
     "browserify": "13.1.0",
     "nodemon": "1.11.0",
