--- a/server/pom.xml
+++ b/server/pom.xml
@@ -44,6 +44,18 @@
     		<artifactId>slf4j-simple</artifactId>
     		<version>1.8.0-alpha0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.pac4j/spark-pac4j -->
+		<dependency>
+    		<groupId>org.pac4j</groupId>
+    		<artifactId>spark-pac4j</artifactId>
+    		<version>2.0.0-RC2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.pac4j/pac4j-http -->
+		<dependency>
+    		<groupId>org.pac4j</groupId>
+    		<artifactId>pac4j-http</artifactId>
+    		<version>2.0.0-RC2</version>
+		</dependency>
         
     </dependencies>
 
