--- a/server/pom.xml
+++ b/server/pom.xml
@@ -56,7 +56,13 @@
     		<artifactId>pac4j-http</artifactId>
     		<version>2.0.0-RC2</version>
 		</dependency>
-        
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.10.2</version>
+		</dependency>
+		    
     </dependencies>
 
 </project>
