--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,6 +14,15 @@
   	</properties>
     
     <build>
+    	<resources>
+			<resource>
+    			<directory>src/main/resources</directory>
+    			<excludes>
+     				<exclude>public/node_modules/**</exclude>
+     				<exclude>public/app/**</exclude>
+    			</excludes>
+   			</resource>
+		</resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
