--- a/server/src/main/resources/public/package.json
+++ b/server/src/main/resources/public/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "jquery": "3.2.1",
     "markdown": "0.5.0",
-    "react": "^15.5.4",
+    "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-images": "0.5.2",
     "react-router": "3.0.0"
