--- a/server/src/main/resources/public/package.json
+++ b/server/src/main/resources/public/package.json
@@ -15,6 +15,7 @@
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-images": "0.5.2",
+    "react-interval": "1.3.3",
     "react-router": "3.0.0"
   },
   "babel": {
