--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,6 +71,12 @@
     		<artifactId>jsoup</artifactId>
     		<version>1.10.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.3</version>
+		</dependency>
 		    
     </dependencies>
 
