--- a/server/src/main/resources/public/package.json
+++ b/server/src/main/resources/public/package.json
@@ -17,7 +17,7 @@
     "react-images": "0.5.2",
     "react-interval": "1.3.3",
     "react-router": "3.0.0",
-    "react-scroll-up": "^1.2.1"
+    "react-scroll-up": "1.2.1"
   },
   "babel": {
     "presets": [
