заготовка опроса гитхаба

--- a/server/src/main/resources/app.properties
+++ b/server/src/main/resources/app.properties
@@ -3,4 +3,6 @@ username=user
 password=12345678
 
 #github
-repo_url=https://api.github.com/repos/pashtetkun/blog/contents/repo
+account=pashtetkun
+project=blog
+folder=repo
