--- a/server/pom.xml
+++ b/server/pom.xml
@@ -65,7 +65,12 @@
     		<artifactId>httpclient</artifactId>
     		<version>4.5.3</version>
 		</dependency>
-		    
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+    		<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.5</version>
+		</dependency>
     </dependencies>
 
 </project>
