--- a/server/src/main/resources/app.properties
+++ b/server/src/main/resources/app.properties
@@ -1,8 +1,8 @@
 #login/password
 username=user
-password=12345678
+password=123456
 
 #github
-account=pashtetkun
-project=blog
+account=Svedetseva
+project=Ilona
 folder=repo
