#7 просмотр статей админом

--- a/server/src/main/resources/app.properties
+++ b/server/src/main/resources/app.properties
@@ -2,6 +2,10 @@
 username=user
 password=123456
 
+#admin account
+login_admin=admin
+password_admin=admin
+
 #github
 account=Svedetseva
 project=Ilona
